; ModuleID = '/home/carl/AnghaBench/fastdfs/storage/extr_tracker_client_thread.c_tracker_unlink_mark_files.c'
source_filename = "/home/carl/AnghaBench/fastdfs/storage/extr_tracker_client_thread.c_tracker_unlink_mark_files.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @tracker_unlink_mark_files to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tracker_unlink_mark_files(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 @storage_unlink_mark_file(i8* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i8*, i8** %2, align 8
  %7 = call i64 @trunk_unlink_mark_file(i8* %6)
  %8 = load i32, i32* %3, align 4
  %9 = sext i32 %8 to i64
  %10 = add nsw i64 %9, %7
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  ret i32 %12
}

declare dso_local i32 @storage_unlink_mark_file(i8*) #1

declare dso_local i64 @trunk_unlink_mark_file(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
